Fixing aligning and spacing of style.css

--- a/style.css
+++ b/style.css
@@ -2,129 +2,113 @@
     --primary-color: #ffffff;
     --secondary-color: #000000;
     --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
-  }
-  body {
-	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #2debbe);
-	background-size: 400% 400%;
-	animation: gradient 15s ease infinite;
-	height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    margin: 60px auto;
-    max-width: 800px;
 }
 
-  #emoji-btn{
-    cursor:pointer;
-    transition: .5s;
-    font-size: 48px;
-    border:none;
+body {
+background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #2debbe);
+background-size: 400% 400%;
+animation: gradient 15s ease infinite;
+height: 100vh;
+font-family: 'Roboto', sans-serif;
+margin: 60px auto;
+max-width: 800px;
+}
 
-  }
+#emoji-btn{
+cursor:pointer;
+transition: .5s;
+font-size: 48px;
+border:none;
+}
 
-  #emoji-btn:hover {
-    transform: scale(1.23);
-  }
+#emoji-btn:hover {
+  transform: scale(1.23);
+}
 
-  h1,
-  h2,
-  h3 {
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
-    margin: 0;
-    color:white;
+h1,
+h2,
+h3 {
+  color: var(--primary-color);
+  text-align: center;
+  margin: 0;
+}
 
-  }
+h1 {
+  font-size: 96px;
+  font-weight: 300;
+  line-height: 95%;
+}
   
-
-  h1 {
-    font-size: 96px;
-    line-height: 95%;
-    font-weight: 300;
-
-  }
+h2 {
+  font-size: 48px;
+  font-weight: 300;
+}
   
-  h2 {
-    font-size: 48px;
-    font-weight: 300;
-
-  }
+h3 {
+  font-size: 24px;
+  font-weight: 400;
+  opacity: 0.7;
+}
   
-  h3 {
-    font-size: 24px;
-    opacity: 0.7;
-    font-weight: 400;
-
-
-
-  }
+p {
+  background: var(--primary-color);
+  padding: 20px;
+  border-radius: 4px;
+  font-size: 18px;
+  text-align: center;
+  line-height: 1.5;
+}
   
-  p {
-    background: var(--primary-color);
-    padding: 20px;
-    border-radius: 4px;
-    font-size: 18px;
-    line-height: 1.5;
-    text-align: center;
-  }
-  
-  .navigation-links {
-    display: flex;
-    align-items:center;
-    justify-content: center;
-    margin-top: 40px;
-    justify-content: center;
-    
+.navigation-links {
+  display: flex;
+  align-items:center;
+  justify-content: center;
+  margin-top: 40px;
+}
 
-  }
+.navigation-links a {
+  margin: 20px;
+  border-radius: 4px;
+  padding: 20px 15px;
+  text-decoration: none;
+  text-transform: capitalize;
+  color: var(--primary-color);
+  border: 1px solid var(--primary-color);
+}
 
+.navigation-links a:hover {
+  background-color: var(--primary-color); 
+  box-shadow: var(--box-shadow);
+  color: black; opacity:0.9;
+}
 
-  
-  .navigation-links a {
-    margin: 20px;
-    border-radius: 4px;
-    padding: 20px 15px;
-    text-decoration: none;
-    text-transform: capitalize;
-    color: var(--primary-color);
-    border: 1px solid var(--primary-color);
-  }
-
- .navigation-links a:hover {
-    background-color: var(--primary-color); 
-    box-shadow: var(--box-shadow);
-    color: black; opacity:0.9;
-  }
-  
-  
-  .homepage-link {
+.homepage-link {
     color: var(--primary-color);
     text-align: center;
     display: block;
-  }
-  
-  .about-paragraphs {
+}
+
+.about-paragraphs {
     display: flex;
     margin: 30px 0;
-  }
+}
   
-  .about-paragraphs p {
+.about-paragraphs p {
     margin: 10px;
-  }
+}
   
-  .email-link {
+.email-link {
     display: flex;
     justify-content: center;
     color: var(--primary-color);
-    font-size: 28px;
+  font-size: 28px;
     text-decoration: none;
-  }
+}
   
-  .email-link:hover {
+.email-link:hover {
     text-decoration: underline;
-  }
-  
+}
 
-  
 
 /*
 .typewriter-header {
